--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -404,7 +404,7 @@ cards:
 ##############################################################################################################################
 
   # Only shown for England
-
+  # {{ StartDevOnlyBlock }}
   - heading: Cases by test type and specimen date
     cardType: chart
     locationAware:
@@ -536,6 +536,8 @@ cards:
         - heading: About 
           tabType: metadata
           filename: cardMetadata/cases/cardCasesByTestType.md
+
+  # {{ EndDevOnlyBlock }}
 
 ##############################################################################################################################
 
