--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -98,7 +98,7 @@ changeLog:
     date: "2021-03-27"
     displayBanner: true
     relativeUrl: "/details/cases"
-    headline: Addition of historical cases in Wales
+    headline: Cases by test type not presented
     body: > 
       Due to a processing issue, data for cases by test type in England is not presented. It 
       will be included in the next update.
