--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -1056,6 +1056,8 @@ cards:
         threshold: 1
         markerColourBelowThreshold: 11
         markerColourAboveThreshold: 10
+        symbolAboveThreshold: triangle-up
+        symbolBelowThreshold: triangle-down
         lineColour: 3
         fields:
           - label: Maximum
