--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -82,6 +82,16 @@ colours:
 
 
 changeLog:
+
+  - type: *dataIssue
+    date: "2021-03-29"
+    displayBanner: true
+    relativeUrl: /details/testing
+    headline: No update to testing data
+    body: > 
+      Due to testing data not being available for the whole of the UK, these metrics have not been updated. 
+      They will be updated in the next release. 
+
   - type: *dataIssue
     date: "2021-03-27"
     displayBanner: true
