--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -83,14 +83,15 @@ colours:
 
 changeLog:
 
-  - type: *dataIssue
-    date: "2021-03-29"
-    displayBanner: true
-    relativeUrl: /details/testing
-    headline: No update to testing data
-    body: > 
-      Due to testing data not being available for the whole of the UK, these metrics have not been updated. 
-      They will be updated in the next release. 
+  # NOTE: Data updated at 8pm on 29 March 2021.
+  # - type: *dataIssue
+  #   date: "2021-03-29"
+  #   displayBanner: true
+  #   relativeUrl: /details/testing
+  #   headline: No update to testing data
+  #   body: > 
+  #     Due to testing data not being available for the whole of the UK, these metrics have not been updated. 
+  #     They will be updated in the next release. 
 
   - type: *dataIssue
     date: "2021-03-27"
