--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -89,7 +89,7 @@ changeLog:
     relativeUrl:
     headline: No data reported for Wales, only vaccinations reported for Northern Ireland
     body: > 
-      As previously announced, no data have been reported for Wales. The UK numbers for cases and deaths have therefore only been updated with data from 
+      As previously announced, no data for cases and deaths have been reported for Wales and Northern Ireland. The UK numbers have therefore only been updated with data from 
       England and Scotland. 
       
       The UK numbers for vaccinations have been updated with data from England, Northern Ireland and Scotland.
